--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,6 +5,8 @@
 @source '../views';
 @source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
 
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Outfit:wght@100..900&display=swap');
+
 @custom-variant dark (&:is(.dark *));
 
 @theme {
@@ -170,4 +172,17 @@ html {
 .swiper-button-next,
 .swiper-button-prev {
     color: white !important;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: 'Outfit', sans-serif;
+}
+
+p {
+    font-family: 'Open Sans', sans-serif;
 }
